--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="factory-functions/calculate.js"></script>
     <script src="tests/calculate-bill-test.js"></script>
 
+    <script src="factory-functions/text-bill.js"></script>
+    <script src="tests/text-bill-test.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
@@ -26,6 +29,10 @@
     <!-- calculate bill -->
     <script src="factory-functions/calculate.js" charset="utf-8"></script>
     <script src="tests/calculate-bill-test.js" charset="utf-8"></script>
+
+    <!-- text bill -->
+    <script src="factory-functions/text-bill.js" charset="utf-8"></script>
+    <script src="tests/text-bill-test.js" charset="utf-8"></script>
 
     <script>
 
