added text bill exercise

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="factory-functions/text-bill.js"></script>
     <script src="tests/text-bill-test.js"></script>
 
+    <script src="factory-functions/radio-bill.js"></script>
+    <script src="tests/radio-bill-test.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
@@ -33,6 +36,10 @@
     <!-- text bill -->
     <script src="factory-functions/text-bill.js" charset="utf-8"></script>
     <script src="tests/text-bill-test.js" charset="utf-8"></script>
+
+    <!-- radio bill -->
+    <script src="factory-functions/radio-bill.js" charset="utf-8"></script>
+    <script src="tests/radio-bill-test.js" charset="utf-8"></script>
 
     <script>
 
