--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="factory-functions/radio-bill.js"></script>
     <script src="tests/radio-bill-test.js"></script>
 
+    <script src="factory-functions/settings-bill.js"></script>
+    <script src="tests/settings-bill-test.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
@@ -41,6 +44,9 @@
     <script src="factory-functions/radio-bill.js" charset="utf-8"></script>
     <script src="tests/radio-bill-test.js" charset="utf-8"></script>
 
+    <!-- settings bill  -->
+    <script src="factory-functions/settings-bill.js" charset="utf-8"></script>
+    <script src="tests/settings-bill-test.js" charset="utf-8"></script>
     <script>
 
         // configure and run mocha
